--- a/posts.html
+++ b/posts.html
@@ -6,11 +6,51 @@ layout: compress
 <html lang="pt-br">
     {% include head.html %}
     <body>
+        <style>
+
+.code-header {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.copy-code-button {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-column-gap: 4px;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 4px 8px;
+
+  &::before {
+    content: "Copy";
+  }
+
+  &::after {
+    content: "📋";
+    display: block;
+  }
+
+  // This class will be toggled via JavaScript
+  &.copied {
+    &::before {
+      content: "Copied!";
+    }
+
+    &::after {
+      content: "✔️";
+    }
+  }
+}
+        </style>
         <div class="page_posts">
         {% include svg-icons.html %}
         {% include header-post.html %}
         {% include tree-posts.html %}
         </div>
         {% include scripts.html %}
+
+        <script src="/assets/scripts/copyCode.js"></script>
     </body>
 </html>
